@@ -14,6 +14,10 @@ Changed lux-to-W/m^2 conversion factor in the fine offset driver.
 
 Added rain rate calculation to Ultimeter driver.
 
+Changed setTime to retrieve system time directly rather than using a value
+passed by the engine. This greatly improves the accuracy of StdTimeSync,
+particularly in network based implementations.
+
 
 2.6.4 06/16/14
 
